--- a/package.json
+++ b/package.json
@@ -47,6 +47,10 @@
     "solidity-coverage": "^0.7.21",
     "ts-node": ">=8.0.0",
     "typechain": "^8.1.0",
-    "typescript": ">=4.5.0"
+    "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "tslint": "^6.1.3",
+    "typescript-formatter": "^7.2.2"
   }
 }
