--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,5 @@
 PROPOSALS_BASE_URI=
 GOERLI_URL=https://eth-goerli.alchemyapi.io/v2/<YOUR ALCHEMY KEY>
+ZKSYNC_URL=
 GOERLI_PRIVATE_KEY=
 ETHERSCAN_API_KEY=
