--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "The decentralised governance system from Golem Foundation",
   "main": "index.js",
   "scripts": {
+    "build": "TS_NODE_TRANSPILE_ONLY=1 npx hardhat compile",
     "test": "TS_NODE_TRANSPILE_ONLY=1 npx hardhat test",
+    "deploy:local": "npx hardhat deploy --tags local",
+    "deploy:goerli": "npx hardhat --network goerli deploy --tags goerli",
+    "deploy:zksync": "npx hardhat deploy-zksync --script deploy/zksync/deploy_allocations.ts",
+    "verify:goerli": "hardhat --network goerli etherscan-verify --license UNLICENSED",
     "format": "npx prettier --write 'contracts/**/*.sol'",
     "lint": "npx solhint 'contracts/**/*.sol'"
   },
@@ -26,6 +31,8 @@
     "@ethersproject/abi": "^5.4.7",
     "@ethersproject/providers": "^5.4.7",
     "@nomiclabs/hardhat-solhint": "^2.0.1",
+    "@matterlabs/hardhat-zksync-deploy": "^0.4.0",
+    "@matterlabs/hardhat-zksync-solc": "^0.3.9",
     "@openzeppelin/contracts": "^4.7.3",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
