--- a/client/package.json
+++ b/client/package.json
@@ -16,18 +16,23 @@
     "prettier:js:pure": "prettier --config .prettierrc.yml --write",
     "prettier:ts": "yarn prettier:ts:pure './**/*.{ts,tsx}'",
     "prettier:ts:pure": "prettier --config .prettierrc.yml --parser typescript --write",
-    "type-check": "tsc --noEmit true"
+    "type-check": "tsc --noEmit true",
+    "test": "jest"
   },
   "dependencies": {
     "classnames": "^2.3.1",
+    "ethers": "^5.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "regenerator-runtime": "^0.13.9"
+    "react-router-dom": "^6.4.1",
+    "regenerator-runtime": "^0.13.9",
+    "use-metamask": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
     "@babel/eslint-parser": "^7.18.9",
     "@babel/preset-react": "^7.18.6",
+    "@types/jest": "^29.0.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
@@ -48,10 +53,12 @@
     "eslint-plugin-sort-keys-fix": "^1.1.1",
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
     "husky": "^8.0.1",
+    "jest": "^29.0.3",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "sass": "^1.54.5",
-    "typescript": "^4.8.2",
+    "ts-jest": "^29.0.2",
+    "typescript": "^4.8.3",
     "vite": "^3.0.0"
   },
   "engines": {
