--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "regenerator-runtime": "^0.13.9",
-    "use-metamask": "^1.3.2"
+    "use-metamask": "^1.3.2",
+    "submodule-contracts": "file:../typechain-types"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
