--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "The decentralised governance system from Golem Foundation",
   "main": "index.js",
   "scripts": {
-    "compile": "TS_NODE_TRANSPILE_ONLY=1 npx hardhat compile",
+    "clean": "npx hardhat clean",
+    "compile": "TS_NODE_TRANSPILE_ONLY=1 npx hardhat compile && npx hardhat --network zksync compile",
     "test": "TS_NODE_TRANSPILE_ONLY=1 npx hardhat test",
     "deploy:local": "npx hardhat deploy --tags local",
     "deploy:goerli": "npx hardhat --network goerli deploy --tags goerli",
-    "deploy:zksync": "npx hardhat deploy-zksync --script deploy/zksync/deploy_allocations.ts",
+    "deploy:zksync": "npx hardhat --network zksync deploy-zksync --script deploy/zksync/deploy_allocations.ts",
     "verify:goerli": "hardhat --network goerli etherscan-verify --license UNLICENSED",
     "format": "npx prettier --write 'contracts/**/*.sol'",
     "lint": "npx solhint 'contracts/**/*.sol'"
