--- a/client/package.json
+++ b/client/package.json
@@ -20,14 +20,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "ethers": "^5.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "regenerator-runtime": "^0.13.9",
-    "use-metamask": "^1.3.2",
-    "submodule-contracts": "file:../typechain-types"
+    "submodule-contracts": "file:../typechain-types",
+    "use-metamask": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
