--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
     "prettier:ts": "yarn prettier:ts:pure './**/*.{ts,tsx}'",
     "prettier:ts:pure": "prettier --config .prettierrc.yml --parser typescript --write",
     "type-check": "tsc --noEmit true",
-    "test": "jest"
+    "test": "jest",
+    "preinstall": "yarn copy-typechain",
+    "copy-typechain": "cp -r ../typechain-types ./src/typechain-types"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -27,7 +29,6 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "regenerator-runtime": "^0.13.9",
-    "submodule-contracts": "file:../typechain-types",
     "use-metamask": "^1.3.2"
   },
   "devDependencies": {
