--- a/package.json
+++ b/package.json
@@ -47,10 +47,11 @@
     "solidity-coverage": "^0.7.21",
     "ts-node": ">=8.0.0",
     "typechain": "^8.1.0",
-    "typescript": "^4.8.3"
-  },
-  "dependencies": {
+    "typescript": "^4.8.3",
     "tslint": "^6.1.3",
     "typescript-formatter": "^7.2.2"
+  },
+  "resolutions": {
+    "ethereumjs-abi": "https://registry.npmjs.org/ethereumjs-abi/-/ethereumjs-abi-0.6.8.tgz"
   }
 }
