--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "regenerator-runtime": "^0.13.9",
-    "use-metamask": "^1.3.2"
+    "use-metamask": "^1.3.2",
+    "zksync-web3": "^0.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
