--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,6 @@ GOERLI_URL=https://eth-goerli.alchemyapi.io/v2/<YOUR ALCHEMY KEY>
 ZKSYNC_URL=
 GOERLI_PRIVATE_KEY=
 ETHERSCAN_API_KEY=
+EPOCHS_START=
+EPOCH_DURATION=
+DECISION_WINDOW=
