--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "TS_NODE_TRANSPILE_ONLY=1 npx hardhat test",
     "deploy:local": "npx hardhat deploy --tags local",
     "deploy:goerli": "npx hardhat --network goerli deploy --tags goerli",
-    "deploy:zksync": "npx hardhat --network zksync deploy-zksync --script deploy/zksync/deploy_allocations.ts",
+    "deploy:zksync": "npx hardhat --network zksync deploy-zksync",
     "verify:goerli": "hardhat --network goerli etherscan-verify --license UNLICENSED",
     "format": "npx prettier --write 'contracts/**/*.sol'",
     "lint": "npx solhint 'contracts/**/*.sol'"
@@ -31,13 +31,14 @@
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
     "@ethersproject/providers": "^5.4.7",
-    "@nomiclabs/hardhat-solhint": "^2.0.1",
     "@matterlabs/hardhat-zksync-deploy": "^0.4.0",
     "@matterlabs/hardhat-zksync-solc": "^0.3.9",
+    "@nomiclabs/hardhat-solhint": "^2.0.1",
     "@openzeppelin/contracts": "^4.7.3",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
     "@types/chai": "^4.2.0",
+    "@types/fs-extra": "^9.0.13",
     "@types/mocha": "^9.1.0",
     "@types/node": ">=12.0.0",
     "chai": "^4.2.0",
@@ -45,6 +46,7 @@
     "dotenv": "^10.0.0",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.4.7",
+    "fs-extra": "^10.1.0",
     "hardhat": "^2.11.2",
     "hardhat-deploy": "^0.11.15",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
@@ -54,9 +56,9 @@
     "solidity-coverage": "^0.7.21",
     "ts-node": ">=8.0.0",
     "tslint": "^6.1.3",
-    "typescript-formatter": "^7.2.2",
     "typechain": "^8.1.0",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "typescript-formatter": "^7.2.2"
   },
   "resolutions": {
     "ethereumjs-abi": "https://registry.npmjs.org/ethereumjs-abi/-/ethereumjs-abi-0.6.8.tgz"
