--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,13 @@
     "prettier:ts:pure": "prettier --config .prettierrc.yml --parser typescript --write",
     "type-check": "tsc --noEmit true",
     "test": "jest",
-    "preinstall": "yarn copy-typechain",
+    "preinstall": "yarn remove-typechain && yarn copy-typechain",
+    "remove-typechain": "rm -rf ./src/typechain-types",
     "copy-typechain": "cp -r ../typechain-types ./src/typechain-types"
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "classnames": "^2.3.1",
+    "classnames": "^2.3.2",
     "ethers": "^5.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
