--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "prettier:ts": "yarn prettier:ts:pure './**/*.{ts,tsx}'",
     "prettier:ts:pure": "prettier --config .prettierrc.yml --parser typescript --write",
     "type-check": "tsc --noEmit true",
-    "test": "jest",
+    "test": "TZ=UTC jest",
     "preinstall": "yarn remove-typechain && yarn copy-typechain",
     "remove-typechain": "rm -rf ./src/typechain-types",
     "copy-typechain": "cp -r ../typechain-types ./src/typechain-types"
@@ -25,6 +25,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
     "ethers": "^5.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
