--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "npx hardhat clean",
     "compile": "TS_NODE_TRANSPILE_ONLY=1 npx hardhat compile && npx hardhat --network zksync compile",
     "test": "TS_NODE_TRANSPILE_ONLY=1 npx hardhat test",
+    "docs": "npx hardhat docgen",
     "deploy:local": "npx hardhat deploy --tags local",
     "deploy:goerli": "npx hardhat --network goerli deploy --tags goerli",
     "deploy:zksync": "npx hardhat --network zksync deploy-zksync",
@@ -50,6 +51,7 @@
     "hardhat": "^2.11.2",
     "hardhat-deploy": "^0.11.15",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
+    "hardhat-docgen": "^1.3.0",
     "hardhat-gas-reporter": "^1.0.8",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-beta.24",
