--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,8 @@
     "copy-typechain": "cp -r ../typechain-types ./src/typechain-types"
   },
   "dependencies": {
+    "@ethersproject/constants": "^5.7.0",
+    "@ethersproject/providers": "^5.7.1",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
