HEX-66: Oracle server execution layer

--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,5 @@ ETHERSCAN_API_KEY=
 EPOCHS_START=
 EPOCH_DURATION=
 DECISION_WINDOW=
+BEACONCHAIN_VALIDATOR_INDEXES=
+EXECUTION_LAYER_VALIDATOR_ADDRESS=
