--- a/client/package.json
+++ b/client/package.json
@@ -29,10 +29,12 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "ethers": "^5.7.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.1",
+    "react-select": "^5.6.1",
     "regenerator-runtime": "^0.13.9",
     "use-metamask": "^1.3.2"
   },
