--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-query": "^3.39.2",
     "react-router-dom": "^6.4.1",
     "react-select": "^5.6.1",
+    "react-toastify": "^9.1.1",
     "regenerator-runtime": "^0.13.9",
     "use-metamask": "^1.3.2"
   },
