fix: when voting write into epoch-1; fix: forbid voting without deposit

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://wildland.io/",
   "devDependencies": {
+    "@defi-wonderland/smock": "^2.3.4",
     "@ethersproject/abi": "^5.4.7",
     "@ethersproject/providers": "^5.4.7",
     "@matterlabs/hardhat-zksync-deploy": "^0.4.0",
