--- a/client/package.json
+++ b/client/package.json
@@ -36,13 +36,13 @@
     "react-router-dom": "^6.4.1",
     "react-select": "^5.6.1",
     "react-toastify": "^9.1.1",
-    "regenerator-runtime": "^0.13.9",
     "use-metamask": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
     "@babel/eslint-parser": "^7.18.9",
     "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.0.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
@@ -65,8 +65,10 @@
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
     "husky": "^8.0.1",
     "jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "regenerator-runtime": "^0.13.11",
     "sass": "^1.54.5",
     "ts-jest": "^29.0.2",
     "typescript": "^4.8.3",
