--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@matterlabs/hardhat-zksync-solc": "^0.3.9",
     "@nomiclabs/hardhat-solhint": "^2.0.1",
     "@openzeppelin/contracts": "^4.7.3",
+    "@prb/math": "^2.5.0",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
     "@types/chai": "^4.2.0",
@@ -54,7 +55,7 @@
     "hardhat-deploy": "^0.11.15",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "hardhat-docgen": "^1.3.0",
-    "hardhat-gas-reporter": "^1.0.8",
+    "hardhat-gas-reporter": "^1.0.9",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-beta.24",
     "solidity-coverage": "^0.7.21",
@@ -66,8 +67,5 @@
   },
   "resolutions": {
     "ethereumjs-abi": "https://registry.npmjs.org/ethereumjs-abi/-/ethereumjs-abi-0.6.8.tgz"
-  },
-  "dependencies": {
-    "@prb/math": "^2.5.0"
   }
 }
