--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-PROPOSALS_BASE_URI=
+PROPOSALS_CID=
 GOERLI_URL=https://eth-goerli.alchemyapi.io/v2/<YOUR ALCHEMY KEY>
 ZKSYNC_URL=
 GOERLI_PRIVATE_KEY=
