--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@ethersproject/constants": "^5.7.0",
     "@ethersproject/providers": "^5.7.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
@@ -33,9 +34,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.1",
     "react-select": "^5.6.1",
     "react-toastify": "^9.1.1",
+    "redux": "^4.2.0",
+    "redux-actions": "^2.6.5",
+    "reselect": "^4.1.7",
     "use-metamask": "^1.3.2"
   },
   "devDependencies": {
