--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@ethersproject/providers": "^5.4.7",
     "@matterlabs/hardhat-zksync-deploy": "^0.4.0",
     "@matterlabs/hardhat-zksync-solc": "^0.3.9",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.5",
+    "@nomiclabs/hardhat-ethers": "^2.2.1",
     "@nomiclabs/hardhat-solhint": "^2.0.1",
     "@openzeppelin/contracts": "^4.7.3",
     "@prb/math": "^2.5.0",
@@ -48,7 +50,6 @@
     "chai": "^4.2.0",
     "chai-bignumber": "^3.0.0",
     "dotenv": "^10.0.0",
-    "ethereum-waffle": "^3.4.4",
     "ethers": "^5.4.7",
     "fs-extra": "^10.1.0",
     "hardhat": "^2.11.2",
