--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "@defi-wonderland/smock": "^2.3.4",
     "@ethersproject/abi": "^5.4.7",
     "@ethersproject/providers": "^5.4.7",
+    "@graphprotocol/hardhat-graph": "^0.1.0-alpha.2",
+    "@graphprotocol/graph-cli": "^0.30.0",
+    "@graphprotocol/graph-ts": "^0.27.0",
     "@matterlabs/hardhat-zksync-deploy": "^0.4.0",
     "@matterlabs/hardhat-zksync-solc": "^0.3.9",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.5",
