HEX-223 Add linter and refactor contracts code as required && HEX-174 Add husky for typescript -- lint-staged for subpackages

--- a/client/package.json
+++ b/client/package.json
@@ -81,5 +81,15 @@
   },
   "engines": {
     "node": ">= 16.13.0 <17.0.0"
+  },
+  "lint-staged": {
+    "./**/*.js": [
+      "yarn prettier:js:pure",
+      "eslint --fix"
+    ],
+    "./**/*.{ts,tsx}": [
+      "yarn prettier:ts:pure",
+      "eslint --fix"
+    ]
   }
 }
