--- a/subgraph/package.json
+++ b/subgraph/package.json
@@ -45,5 +45,15 @@
     "@graphprotocol/graph-cli": "^0.30.1",
     "@graphprotocol/graph-ts": "^0.27.0",
     "matchstick-as": "^0.5.0"
+  },
+  "lint-staged": {
+    "./**/*.js": [
+      "yarn prettier:js:pure",
+      "eslint --fix"
+    ],
+    "./**/*.{ts,tsx}": [
+      "yarn prettier:ts:pure",
+      "eslint --fix"
+    ]
   }
 }
