--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -8,3 +8,12 @@ semi: true
 singleQuote: true
 tabWidth: 2
 trailingComma: all
+
+overrides:
+  - files: "*.sol"
+    options:
+      printWidth: 80
+      tabWidth: 4
+      useTabs: false
+      singleQuote: false
+      bracketSpacing: false
