--- a/subgraph/package.json
+++ b/subgraph/package.json
@@ -5,15 +5,15 @@
     "type": "git",
     "url": "git+https://gitlab.com/wildland/hexagon.git"
   },
-  "license": "GPL-3.0-only",
+  "license": "GPL-3.0",
   "scripts": {
-    "build-goerli": "graph build --network goerli",
-    "build-local": "graph build",
+    "build:goerli": "graph build --network goerli",
+    "build:local": "graph build --network localhost",
     "clean": "docker-compose down -v && docker-compose rm -v && sudo rm -rf data/ipfs data/postgres",
     "codegen": "graph codegen",
     "create-subgraph": "graph create --node http://127.0.0.1:8020 hexagon",
-    "deploy-goerli": "graph deploy --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020 --network goerli hexagon",
-    "deploy-local": "graph deploy --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020 hexagon",
+    "deploy:goerli": "graph deploy --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020 --network goerli hexagon",
+    "deploy:local": "graph deploy --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020 hexagon",
     "eslint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "eslint:fix": "yarn prettier && yarn eslint --fix",
     "install-root-packages": "cd .. && yarn install && yarn compile && cd subgraph",
