HEX-225: subgraph-setup && remove zkSync && remove TestRewards

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,7 @@ coverage.json
 
 # Hardhat files
 cache
-cache-zk
 artifacts
-artifacts-zk
 deployments
 typechain
 typechain-types
@@ -27,6 +25,7 @@ venv
 /subgraph/generated
 /subgraph/build
 /subgraph/data
+/subgraph/networks.json
 /subgraph/tests/.*
 
 #logs
