HEX-254 Implement localIdentName for SCSS classes

--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,13 @@
   "license": "GPL-3.0",
   "scripts": {
     "build": "vite build",
+    "build:staging": "vite build --mode staging",
     "copy-typechain": "cp -r ../typechain-types ./src/typechain-types",
     "dev": "yarn predev && vite",
     "eslint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "eslint:fix": "yarn prettier && yarn eslint --fix",
     "install-root-packages": "cd .. && yarn install && yarn compile && cd client",
-    "predev": "yarn install-root-packages && yarn install",
+    "predev": "yarn install",
     "preinstall": "yarn install-root-packages && yarn remove-typechain && yarn copy-typechain",
     "prettier": "yarn prettier:js --loglevel silent && yarn prettier:ts --loglevel silent",
     "prettier:js": "yarn prettier:js:pure './**/*.{js,jsx}'",
@@ -75,6 +76,7 @@
     "jest-environment-jsdom": "^29.3.1",
     "prettier": "^2.8.3",
     "regenerator-runtime": "^0.13.11",
+    "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.57.1",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.4",
