--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,24 @@
-.idea
-node_modules
 .env
+.idea
+.yarn
 coverage
 coverage.json
-.yarn
+node_modules
 
 # Hardhat files
-cache
+.docs
 artifacts
 artifacts-zk
+cache
 cache-zk
 deployments
 typechain
 typechain-types
-.docs
 
 # Client
 dist
+## rollup-plugin-visualizer result file
+/client/bundleAnalysis.html
 
 # Oracle
 .pytest_cache
@@ -24,14 +26,14 @@ __pycache__
 venv
 
 # Subgraph
-/subgraph/generated
 /subgraph/build
 /subgraph/data
+/subgraph/generated
 /subgraph/networks.json
 /subgraph/tests/.*
 
 #logs
+/oracle/api_mock/*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/oracle/api_mock/*.log
