--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "hexagon-client",
+  "name": "octant-client",
   "version": "1.0.0",
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/wildland/hexagon.git"
+    "url": "git+https://gitlab.com/wildland/octant.git"
   },
   "license": "GPL-3.0",
   "scripts": {
