refactor: hexagon -> octant in subgraph

--- a/subgraph/package.json
+++ b/subgraph/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "hexagon-subgraph",
+  "name": "octant-subgraph",
   "version": "1.0.0",
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/wildland/hexagon.git"
+    "url": "git+https://gitlab.com/wildland/octant.git"
   },
   "license": "GPL-3.0",
   "scripts": {
@@ -11,9 +11,9 @@
     "build:local": "graph build --network localhost",
     "clean": "docker-compose down -v && docker-compose rm -v && sudo rm -rf data/ipfs data/postgres",
     "codegen": "graph codegen",
-    "create-subgraph": "graph create --node http://127.0.0.1:8020 hexagon",
-    "deploy:goerli": "graph deploy --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020 --network goerli hexagon",
-    "deploy:local": "graph deploy --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020 hexagon",
+    "create-subgraph": "graph create --node http://127.0.0.1:8020 octant",
+    "deploy:goerli": "graph deploy --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020 --network goerli octant",
+    "deploy:local": "graph deploy --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020 octant",
     "eslint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "eslint:fix": "yarn prettier && yarn eslint --fix",
     "install-root-packages": "cd .. && yarn install && yarn compile && cd subgraph",
