--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -148,7 +148,7 @@ Contracts deploy:
   script:
     - yarn deploy:goerli
 
-Pages:
+pages:
   stage: deploy
   rules:
     - if: '$CI_COMMIT_REF_NAME == "master"'
