--- a/client/package.json
+++ b/client/package.json
@@ -46,7 +46,8 @@
     "redux": "^4.2.0",
     "redux-actions": "^2.6.5",
     "reselect": "^4.1.7",
-    "use-metamask": "^1.3.3"
+    "use-metamask": "^1.3.3",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
