--- a/client/package.json
+++ b/client/package.json
@@ -31,10 +31,12 @@
     "@ethersproject/constants": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
     "@reduxjs/toolkit": "^1.9.1",
+    "@web3modal/ethereum": "^2.2.2",
+    "@web3modal/react": "^2.2.2",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
-    "ethers": "^5.7.2",
+    "ethers": "^5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -46,8 +48,7 @@
     "redux": "^4.2.0",
     "redux-actions": "^2.6.5",
     "reselect": "^4.1.7",
-    "use-metamask": "^1.3.3",
-    "zustand": "^4.3.6"
+    "wagmi": "^0.12.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
