--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-identicons": "^1.2.5",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.7.0",
     "react-select": "^5.7.0",
