--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "ethers": "^5",
+    "graphql": "^16.6.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
